[project]
name = "nonebot-plugin-quark"
version = "0.1.1"
description = "NoneBot2 å¤¸å…‹äº‘ç›˜èµ„æºæœç´¢æ’ä»¶"
authors = [{ name = "fllesser", email = "fllessive@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nonebot", "nonebot2", "quark", "search"]
dependencies = [
    "httpx>=0.26.0,<1.0.0",
    "nonebot2>=2.4.0,<3.0.0",
    "nonebot-adapter-onebot>=2.4.6",
]

[project.urls]
Homepage = "https://github.com/fllesser/nonebot-plugin-quark"
Repository = "https://github.com/fllesser/nonebot-plugin-quark.git"
Issues = "https://github.com/fllesser/nonebot-plugin-quark/issues"


[dependency-groups]
dev = [
    "nonebot2[fastapi]>=2.4.3,<3.0.0",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "ruff>=0.14.1,<1.0.0",
    "bump-my-version>=1.2.4",
]
test = [
    "nonebot2[fastapi]>=2.4.2,<3.0.0",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "nonebug>=0.3.7,<1.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pytest-asyncio>=1.2.0,<1.3.0",
    "poethepoet>=0.37.0",
]

[tool.poe.tasks]
test = "pytest --cov=src --cov-report=xml:coverage.xml --junitxml=junit.xml -n auto"
bump = "bump-my-version bump"
show-bump = "bump-my-version show-bump"


[tool.coverage.report]
show_missing = true

[tool.nonebot]
plugins = ["nonebot_plugin_quark"]

[tool.uv]
required-version = ">=0.9.2"
default-groups = ["test", "dev"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
addopts = [
    "-v",               # è¯¦ç»†è¾“å‡º
    "-s",               # æ˜¾ç¤ºæ‰“å°ä¿¡æ¯
    "--tb=short",       # ç®€çŸ­çš„é”™è¯¯å›žæº¯
    "-ra",              # æ˜¾ç¤ºæ‰€æœ‰æµ‹è¯•ç»“æžœæ‘˜è¦
    "--strict-markers", # ä¸¥æ ¼æ ‡è®°æ¨¡å¼
    # "--doctest-modules", # è¿è¡Œæ–‡æ¡£æµ‹è¯•
    "--import-mode=prepend", # å¯¼å…¥æ¨¡å¼
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "W191",   # indentation contains tabs
    # "I001",   # isort: imports are incorrectly sorted
]


[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true


[tool.bumpversion]
current_version = "0.1.1"
commit = true
message = "ðŸ”– release: bump vesion from {current_version} to {new_version}"
tag = true


[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"nonebot-plugin-quark\"\nversion = \"{current_version}\""
replace = "name = \"nonebot-plugin-quark\"\nversion = \"{new_version}\""
